<resources>
    <string name="app_name">MyNewsFeed</string>
    <string name="textView">My News Feed</string>
    <string name="ETuser">User</string>
    <string name="ETpass">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="text_view1">Allow Location?</string>
    <string name="buttonLogout">Log out</string>
    <string name="bt_location">Allow</string>
    <string name="bt_deny">Deny</string>
    <string name="tv_aviso">You cannot continue if you do not accept location permissions for My News Feed</string>
    <string name="bt_allow">Allow access to the location</string>
    <string name="title_activity_feed1">Feed1</string>
    <string name="button_Signup">Sign Up</string>
    <string name="tv_or">Or</string>tv_signup
    <string name="tv_signup">Sign Up</string>
    <string name="b_register">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">United States</string>
    <string name="tab_text_2">Mexico</string>
    <string name="tab_text_3">Australia</string>
    <string name="title_activity_tabbed_">Tabbed_Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView_Ubicacion">Ubicacion del dispositivo</string>
    <string name="tv_allowloc">Allos My News Feed to access the location of this device?</string>
    <string name="tv_techspace">- Tech and Space news -</string>
</resources>